Landing page: Added Futurice-Monospaced and fixed long-name-cutoff from charts

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -10,6 +10,12 @@
   font-weight: bold;
 }
 
+@font-face {
+  font-family: Futurice-monospaced;
+  src: local('Futurice'), url(../fonts/FuturiceMonospaced.otf);
+}
+
+
 /* Color palette */
 
 :root {
